--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="./Css/style1.css">
     <script src="https://kit.fontawesome.com/41f04730dd.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./Js/app.js" ></script>
     <title>InSoles</title>
