--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./Css/style.css">
+    <script src="https://kit.fontawesome.com/41f04730dd.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./Js/app.js" ></script>
     <title>InSoles</title>
 </head>
 <body>
+    <nav>
+        <a herf="#" class="logo"><span>In</span>soles</a>
+        <ul>
+            <li><a href="#">Home </a></li>
+            <li><a href="#">About </a></li>
+            <li><a href="#">Shop </a></li>
+            <li><a href="#">Services </a></li>
+        </ul>
+        <div class="icon">
+            <a href="#"> <i class='fas fa-user-alt'></i></a>
+            <a href="#"><i class="fa-regular fa-heart"></i></a>
+            <a href="#"><i class="fa-sharp fa-solid fa-bag-shopping"></i></a>
+        </div> 
+    </nav>
+    <div class="sec1">
+           <img name="slide" class="slider" >
+    </div>
     
 </body>
 </html>
