made some minor changes in item section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,249 @@
     </div>
     <div class="products">
         <div class="items">
-            <img src="./Images/jordan.jpg">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+    </div>
+    <div class="products">
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+    </div>
+    <div class="products">
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
+            <p class="items1">Jordan  classic limited</p>
+            <div class="products1">
+                <p class="items2">41,000 &#x20B9;</p>
+                <button type="submit">Add To Wishlist</button>
+            </div>
+            <form action="#">
+                    <label >Size</label><select>
+                        <option value="1">6</option>
+                        <option value="1">7</option>
+                        <option value="1">8</option>
+                        <option value="1">9</option>
+                    </select>
+                <input type="submit" value="Add To Cart">
+            </form>
+        </div>
+        <div class="items">
+            <img src="./Images/items/jordan.jpg">
             <p class="items1">Jordan  classic limited</p>
             <div class="products1">
                 <p class="items2">41,000 &#x20B9;</p>
