--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#">Services </a></li>
         </ul>
         <div class="icon">
-            <a href="#"> <i class='fas fa-user-alt'></i></a>
+            <a href="login.html"> <i class='fas fa-user-alt'></i></a>
             <a href="#"><i class="fa-regular fa-heart"></i></a>
             <a href="#"><i class="fa-sharp fa-solid fa-bag-shopping"></i></a>
         </div> 
