services section added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="./Css/style.css">
     <link rel="stylesheet" href="./Css/style1.css">
     <script src="https://kit.fontawesome.com/41f04730dd.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./Js/app.js" ></script>
+    <script type="text/javascript" src="./Js/app.js"></script>
     <title>InSoles</title>
 </head>
+
 <body>
     <nav>
         <a herf="#" class="logo"><span>In</span>soles</a>
@@ -23,12 +25,12 @@
             <a href="login.html"> <i class='fas fa-user-alt'></i></a>
             <a href="#"><i class="fa-regular fa-heart"></i></a>
             <a href="#"><i class="fa-sharp fa-solid fa-bag-shopping"></i></a>
-        </div> 
+        </div>
     </nav>
     <div class="sec1">
-           <img name="slide" class="slider" >
+        <img name="slide" class="slider">
     </div>
-    <div class="shopnow"  >SHOP NOW</div>
+    <div class="shopnow">SHOP NOW</div>
     <div class="products">
         <div class="items">
             <img src="./Images/items/product-1.jpg">
@@ -38,12 +40,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -55,12 +57,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -72,12 +74,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -89,12 +91,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -106,12 +108,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -125,12 +127,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -142,12 +144,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -159,12 +161,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -176,12 +178,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -193,12 +195,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -212,12 +214,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -229,12 +231,12 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -246,29 +248,29 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                        <option value="1">9</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                    <option value="1">9</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
         <div class="items">
             <img src="./Images/items/w.webp">
-            <p class="items1">Denill  White Heels</p>
+            <p class="items1">Denill White Heels</p>
             <div class="products1">
                 <p class="items2">13,000 &#x20B9;</p>
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">5</option>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">5</option>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
@@ -280,16 +282,39 @@
                 <button type="submit">Add To Wishlist</button>
             </div>
             <form action="#">
-                    <label >Size</label><select>
-                        <option value="1">5</option>
-                        <option value="1">6</option>
-                        <option value="1">7</option>
-                        <option value="1">8</option>
-                    </select>
+                <label>Size</label><select>
+                    <option value="1">5</option>
+                    <option value="1">6</option>
+                    <option value="1">7</option>
+                    <option value="1">8</option>
+                </select>
                 <input type="submit" value="Add To Cart">
             </form>
         </div>
     </div>
-
+    <div class="shopnow">Services</div>
+    <div class="services">
+        <div class="services1">
+            <div class="circle"><i class="fa-sharp fa-solid fa-truck-fast"></i></div>
+            <p>FREE SHIPING</p>
+            <span>All orders over $150</span>
+        </div>
+        <div class="services1">
+            <div class="circle"><i class="fa-solid fa-credit-card"></i></div>
+            <p>QUICK PAYMENT</p>
+            <span>100% secure payment</span>
+        </div>
+        <div class="services1">
+            <div class="circle"><i class="fa-solid fa-box-open"></i></div>
+            <p>FREE RETURNS</p>
+            <span>Money back in 30 days</span>
+        </div>
+        <div class="services1">
+            <div class="circle"><i class="fa-solid fa-clock"></i></div>
+            <p>24/7 SUPPORT</p>
+            <span>Get Quick Support</span>
+        </div>
+    </div>
 </body>
-</html> 
+
+</html>
