styles are modified

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <ul>
             <li><a href="#">Home </a></li>
             <li><a href="#">About </a></li>
-            <li><a href="#">Shop </a></li>
-            <li><a href="#">Services </a></li>
+            <li><a href="#shopnow">Shop </a></li>
+            <li><a href="#services">Services </a></li>
         </ul>
         <div class="icon">
             <a href="login.html"> <i class='fas fa-user-alt'></i></a>
@@ -30,7 +30,7 @@
     <div class="sec1">
         <img name="slide" class="slider">
     </div>
-    <div class="shopnow">SHOP NOW</div>
+    <div class="shopnow" id="shopnow">SHOP NOW</div>
     <div class="products">
         <div class="items">
             <img src="./Images/items/product-1.jpg">
@@ -292,7 +292,7 @@
             </form>
         </div>
     </div>
-    <div class="shopnow">Services</div>
+    <div class="shopnow" id="services">Services</div>
     <div class="services">
         <div class="services1">
             <div class="circle"><i class="fa-sharp fa-solid fa-truck-fast"></i></div>
