--- a/signin.html
+++ b/signin.html
@@ -1,21 +1,67 @@
+<?php 
+
+include 'config.php';
+
+error_reporting(0);
+
+session_start();
+
+if (isset($_SESSION['username'])) {
+    header("Location: index.php");
+}
+
+if (isset($_POST['submit'])) {
+	$username = $_POST['username'];
+	$email = $_POST['email'];
+	$password = md5($_POST['password']);
+	$cpassword = md5($_POST['cpassword']);
+
+	if ($password == $cpassword) {
+		$sql = "SELECT * FROM signup WHERE email='$email'";
+		$result = mysqli_query($conn, $sql);
+		if (!$result->num_rows > 0) {
+			$sql = "INSERT INTO signup (name, email, password)
+					VALUES ('$username', '$email', '$password')";
+			$result = mysqli_query($conn, $sql);
+			if ($result) {
+				echo "<script>alert('Wow! User Registration Completed.')</script>";
+				$username = "";
+				$email = "";
+				$_POST['password'] = "";
+				$_POST['cpassword'] = "";
+			} else {
+				echo "<script>alert('Woops! Something Wrong Went.')</script>";
+			}
+		} else {
+			echo "<script>alert('Woops! Email Already Exists.')</script>";
+		}
+		
+	} else {
+		echo "<script>alert('Password Not Matched.')</script>";
+	}
+}
+
+?>
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/login.css">
-    <title>login</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="Css\login.css">
+	<title>Register Form</title>
 </head>
 <body>
-   <form class="box" action="home.html" >
-    <h1>Signin</h1>
-    <input type="text" name="" placeholder="name"> 
-    <input type="text" placeholder="Address" >
-    <input type="email" name="" placeholder="Email Id">
-    <input type="password" name="" placeholder="Password">
-    <a href="" target="_self"><input type="submit" name="" value="Signin">
-    </a>
-   </form>
+	<div class="box">
+		<form action="" method="POST" class="login-email">
+            <h1 class="login-text" style="font-size: 2rem; font-weight: 800;">Register</h1>
+				<input type="text" placeholder="Username" name="username" value="<?php echo $username; ?>" required>
+				<input type="email" placeholder="Email" name="email" value="<?php echo $email; ?>" required>			
+				<input type="password" placeholder="Password" name="password" value="<?php echo $_POST['password']; ?>" required>
+				<input type="password" placeholder="Confirm Password" name="cpassword" value="<?php echo $_POST['cpassword']; ?>" required>
+				<button name="submit" class="btn">Register</button>
+			<p class="login-register-text">Have an account? <a href="login.php">Login Here</a>.</p>
+		</form>
+	</div>
 </body>
 </html>
